--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
   build:
     executor: newman/postman-newman-docker
     steps:
-      - checkout
+      - checkout1
       - newman/newman-run:
           collection: ./FaceRecoTest.postman_collection.json
           environment: ./FaceReco.postman_environment.json
@@ -21,7 +21,7 @@ jobs:
   build:
     executor: newman/postman-newman-docker
     steps:
-      - checkout
+      - checkout2
       - newman/newman-run:
           collection: ./FaceRecoTest.postman_collection.json
           environment: ./FaceReco.postman_environment.json
@@ -29,7 +29,7 @@ jobs:
   build:
     executor: newman/postman-newman-docker
     steps:
-      - checkout
+      - checkout3
       - newman/newman-run:
           collection: ./FaceRecoTest.postman_collection.json
           environment: ./FaceReco.postman_environment.json
@@ -37,7 +37,7 @@ jobs:
   build:
     executor: newman/postman-newman-docker
     steps:
-      - checkout
+      - checkout4
       - newman/newman-run:
           collection: ./FaceRecoTest.postman_collection.json
           environment: ./FaceReco.postman_environment.json
@@ -45,7 +45,7 @@ jobs:
   build:
     executor: newman/postman-newman-docker
     steps:
-      - checkout
+      - checkout5
       - newman/newman-run:
           collection: ./FaceRecoTest.postman_collection.json
           environment: ./FaceReco.postman_environment.json
@@ -53,7 +53,7 @@ jobs:
   build:
     executor: newman/postman-newman-docker
     steps:
-      - checkout
+      - checkout6
       - newman/newman-run:
           collection: ./FaceRecoTest.postman_collection.json
           environment: ./FaceReco.postman_environment.json
@@ -61,7 +61,7 @@ jobs:
   build:
     executor: newman/postman-newman-docker
     steps:
-      - checkout
+      - checkout7
       - newman/newman-run:
           collection: ./FaceRecoTest.postman_collection.json
           environment: ./FaceReco.postman_environment.json
@@ -69,7 +69,7 @@ jobs:
   build:
     executor: newman/postman-newman-docker
     steps:
-      - checkout
+      - checkout8
       - newman/newman-run:
           collection: ./FaceRecoTest.postman_collection.json
           environment: ./FaceReco.postman_environment.json
@@ -77,7 +77,7 @@ jobs:
   build:
     executor: newman/postman-newman-docker
     steps:
-      - checkout
+      - checkout9
       - newman/newman-run:
           collection: ./FaceRecoTest.postman_collection.json
           environment: ./FaceReco.postman_environment.json          
