--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,14 @@
 version: 2.1
 orbs:
   newman: postman/newman@1.0.0
+jobs:
+  build:
+    executor: newman/postman-newman-docker
+    steps:
+      - checkout
+      - newman/newman-run:
+          collection: ./FaceRecoTest.postman_collection.json
+          environment: ./FaceReco.postman_environment.json
 jobs1:
   build:
     executor: newman/postman-newman-docker
